Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57351

If both x and y axes of a series are logarithmic, you cannot set ranges to axes

XMLWordPrintable

    • 34285c480f3ed811a4a58cf8ff0148c7f9698262

      To repro, modify logvalueaxis example so that both axes are instances of QLogValueAxis and explicitly set a range to both.

          QLogValueAxis *axisX = new QLogValueAxis;
          axisX->setTitleText("Data point");
          axisX->setLabelFormat("%i");
          chart->addAxis(axisX, Qt::AlignBottom);
          axisX->setBase(8);
          axisX->setRange(1, 10000);
          series->attachAxis(axisX);
      
          QLogValueAxis *axisY = new QLogValueAxis;
          axisY->setLabelFormat("%g");
          axisY->setTitleText("Values");
          axisY->setBase(8);
          axisX->setRange(1, 10000);
          chart->addAxis(axisY, Qt::AlignLeft);
          series->attachAxis(axisY);
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes