Fix domain ranges when attaching new axis that changes domain type

If domain type changes when attaching an axis, the domain range in the
orientation other than the attached axis would be reset to default
range determined from series data.

Task-number: QTBUG-57351
Change-Id: I7e810e468478c93b002718c00adf8a6721a368f8
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>